--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@skynexui/components": "^1.25.0",
+    "@supabase/supabase-js": "^1.33.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
